# simpledb

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  dev.sh  rustfmt.toml
.github/workflows/: bench_on_pull_request.yml  rust.yml
benches/: main.rs
benchmark/: Cargo.toml  README.md
benchmark/src/: common.rs  main.rs
dev/bench/: data.js
examples/: main.rs
sh/: bench.sh  dist.sh  pid.sh  udeps.sh  upgrade.sh
src/: codec.rs  database.rs  encoding.rs  lib.rs  main.rs
tests/: database_test.rs  encoding_test.rs
tests/common/: mod.rs
