[package]
authors = ["Zongmin Lei <leizongmin@gmail.com>"]
description = "NoSQL embedded database on top of RocksDB"
edition = "2021"
homepage = "https://github.com/leizongmin/simpledb"
keywords = ["rocksdb", "nosql"]
license = "MIT"
name = "simpledb"
repository = "https://github.com/leizongmin/simpledb"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.1.0"

[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["zstd", "lz4"]

[dev-dependencies]
anyhow = "1.0.58"
rand = "0.8.5"

[dev-dependencies.criterion]
version = "0.3.6"

[profile.bench]
lto = true

[[bench]]
name = "main"
harness = false
