[package]
authors = ["Zongmin Lei <leizongmin@gmail.com>"]
description = "NoSQL embedded database on top of RocksDB"
edition = "2021"
homepage = "https://github.com/leizongmin/simpledb"
keywords = ["rocksdb", "nosql"]
license = "MIT"
name = "simpledb"
repository = "https://github.com/leizongmin/simpledb"
version = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.5.0"

[dependencies.rocksdb]
version = "0.20.1"
default-features = false
features = ["zstd", "lz4"]

[dev-dependencies]
anyhow = "1.0.69"
rand = "0.8.5"

[dev-dependencies.criterion]
version = "0.4.0"

[profile.bench]
lto = true

[[bench]]
name = "main"
harness = false
