[package]
name = "simpledb-benchmark"
version = "0.1.0"
authors = ["Zongmin Lei <leizongmin@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
simpledb = { path = "../" }
rand = "0.8"

[[bench]]
name = "main"
harness = false

[dev-dependencies]
criterion = "0.4.0"
